Day 7 : Done Creating Home Section of the Application, Carousel , Product_Widget

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   url_launcher: ^6.1.12
   flutter_native_splash: ^2.3.2
   smooth_page_indicator: ^1.1.0
-
+  carousel_slider: ^4.2.1
 
   #Icons
   cupertino_icons: ^1.0.2
