Day 9 : Wishlist , Review & Ratings , Settings , Product Details.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   get: ^4.6.5
   get_storage: ^2.1.1
 
+  # Product Specific
+  readmore: ^2.2.0
+  flutter_rating_bar: ^4.0.1
+
 
 dev_dependencies:
   flutter_test:
